--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,8 +15,8 @@ workflows:
         vars:
           XCODE_PROJECT: "VolcanoWorld.xcodeproj" # <-- Put the name of your workspace here.
           XCODE_SCHEME: "VolcanoWorld" # <-- Put the name of your scheme here.
-          BUNDLE_ID: "com.vulcanwrld.olfa" # <-- Put your Bundle Id here.
-          APP_STORE_APPLE_ID: 6754283458 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
+          BUNDLE_ID: "com.vulcanowrld.josl" # <-- Put your Bundle Id here.
+          APP_STORE_APPLE_ID: 6754455779 # <-- Put the app id number here. This is found in App Store Connect > App > General > App Information
         xcode: latest # <-- set to specific version e.g. 14.3, 15.0 to avoid unexpected updates.
         cocoapods: default
       triggering:
